src/parser.cpp
//------------------------------------------------------------------------------
/// @brief SnuPL/0 parser
/// @author Bernhard Egger <bernhard@csap.snu.ac.kr>
/// @section changelog Change Log
/// 2012/09/14 Bernhard Egger created
/// 2013/03/07 Bernhard Egger adapted to SnuPL/0
/// 2014/11/04 Bernhard Egger maintain unary '+' signs in the AST
/// 2016/04/01 Bernhard Egger adapted to SnuPL/1 (this is not a joke)
/// 2016/09/28 Bernhard Egger assignment 2: parser for SnuPL/-1
///
/// @section license_section License
/// Copyright (c) 2012-2016, Bernhard Egger
/// All rights reserved.
///
/// Redistribution and use in source and binary forms,  with or without modifi-
/// cation, are permitted provided that the following conditions are met:
///
/// - Redistributions of source code must retain the above copyright notice,
///   this list of conditions and the following disclaimer.
/// - Redistributions in binary form must reproduce the above copyright notice,
///   this list of conditions and the following disclaimer in the documentation
///   and/or other materials provided with the distribution.
///
/// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
/// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,  BUT NOT LIMITED TO,  THE
/// IMPLIED WARRANTIES OF MERCHANTABILITY  AND FITNESS FOR A PARTICULAR PURPOSE
/// ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT HOLDER  OR CONTRIBUTORS BE
/// LIABLE FOR ANY DIRECT,  INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSE-
/// QUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF  SUBSTITUTE
/// GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
/// HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN  CONTRACT, STRICT
/// LIABILITY, OR TORT  (INCLUDING NEGLIGENCE OR OTHERWISE)  ARISING IN ANY WAY
/// OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
/// DAMAGE.
//------------------------------------------------------------------------------

#include <limits.h>
#include <cassert>
#include <errno.h>
#include <cstdlib>
#include <vector>
#include <iostream>
#include <exception>

#include <string.h>

#include "parser.h"
using namespace std;

/*

--- SnuPL/1 EBNF definitions ---
(letter, digit, character, char, string, number, ident will be treated as terminals)
module              = "module" ident ";" varDeclaration { subroutineDecl } "begin" statSequence "end" ident ".".
letter              = "A".."Z" | "a".."z" | "_".
digit               = "0".."9".
character           = ASCIIchar | "\n" | "\t" | "\"" | "\'" | "\\" | "\0"
char                = "'" character "'"
string              = '"' {character} '"'.
ident               = letter { letter | digit }.
number              = digit { digit }.
boolean             = "true" | "false".
type                = basetype | type "[" [ number ] "]".
basetype            = "boolean" | "char" | "integer".
qualident           = ident { "[" expression "]" }.
factOp              = "*" | "/" | "&&".
termOp              = "+" | "-" | "||".
relOp               = "=" | "#" | "<" | "<=" | ">" | ">=".
factor              = qualident | number | boolean | char | string | "(" expression ")" | subroutineCall | "!" factor.
term                = factor { factOp factor }.
simpleexpr          = ["+"|"-"] term { termOp term }.
expression          = simpleexpr [ relOp simpleexpr ].
assignment          = qualident ":=" expression.
subroutineCall      = ident "(" [ expression {"," expression} ] ")".
ifStatement         = "if" "(" expression ")" "then" statSequence [ "else" statSequence ] "end".
whileStatement      = "while" "(" expression ")" "do" statSequence "end".
returnStatement     = "return" [ expression ].
statement           = assignment | subroutineCall | ifStatement | whileStatement | returnStatement.
statSequence        = [ statement { ";" statement } ].
varDeclaration      = [ "var" varDeclSequence ";" ].
varDeclSequence     = varDecl { ";" varDecl }.
varDecl             = ident { "," ident } ":" type.
subroutineDecl      = (procedureDecl | functionDecl) subroutineBody ident ";".
procedureDecl       = "procedure" ident [ formalParam ] ";".
functionDecl        = "function" ident [ formalParam ] ":" type ";".
formalParam         = "(" [ varDeclSequence ] ")".
subroutineBody      = varDeclaration "begin" statSequence "end".
comment             = "//" {[^\n]} \n
whitespace          = { " " | \t | \n }

--- FIRST of SnuPL/1 keywords ---
(letter, digit, character, char, string, number, ident will be treated as terminals)
module              : "module"
char                : char
string              : string
number              : number
ident               : ident
boolean             : "true" | "false"
type                : "boolean" | "char" | "integer"
qualident           : ident
factOp              : "*" | "/" | "&&"
termOp              : "+" | "-" | "||"
relOp               : "=" | "#" | "<" | "<=" | ">" | ">="
factor              : ident | number | "true" | "false" | char | string | "(" | "!"
  (CAUTION : ident is from both 'qualident' and 'subroutineCall')
term                : ident | number | "true" | "false" | char | string | "(" | "!"
  (CAUTION : ident is from both 'qualident' and 'subroutineCall')
simpleexpr          : "+" | "-" | ident | number | "true" | "false" | char | string | "(" | "!"
  (CAUTION : ident is from both 'qualident' and 'subroutineCall')
expression          : "+" | "-" | ident | number | "true" | "false" | char | string | "(" | "!"
  (CAUTION : ident is from both 'qualident' and 'subroutineCall')
assignment          : ident
subroutineCall      : ident
ifStatement         : "if"
whileStatement      : "while"
returnStatement     : "return"
statement           : ident | "if" | "while" | "return"
  (CAUTION : ident is from both 'assignment' and 'subroutineCall')
statSequence        : epsilon | ident | "if" | "while" | "return"
  (CAUTION : ident is from both 'assignment' and 'subroutineCall')
varDeclaration      : epsilon | "var"
varDeclSequence     : ident
varDecl             : ident
subroutineDecl      : "procedure" | "function"
procedureDecl       : "procedure"
functionDecl        : "function"
formalParam         : "("
subroutineBody      : "var" | "begin"

--- FOLLOW of SnuPL/1 keywords ---
(letter, digit, character, char, string, number, ident will be treated as terminals)
(Set based)
module              : $ |
boolean             : FOLLOW(factor) |
type                : "[" | FOLLOW(varDecl) | ";" | 
basetype            : FOLLOW(type)
qualident           : FOLLOW(factor) | ":=" | 
factOp              : FIRST(factor) - epsilon | 
termOp              : FIRST(term) - epsilon | 
relOp               : FIRST(simpleexpr) - epsilon | 
factor              : FOLLOW(factor) | FIRST(factOp) - epsilon | FOLLOW(term) | 
term                : FOLLOW(simpleexpr) | FIRST(termOp) - epsilon | 
simpleexpr          : FOLLOW(expression) | FIRST(relOp) - epsilon |
expression          : "]" | ")" | FOLLOW(assignment) | "," | FOLLOW(returnStatement) | 
assignment          : FOLLOW(statement) | 
subroutineCall      : FOLLOW(factor) | FOLLOW(statement) | 
ifStatement         : FOLLOW(statement) | 
whileStatement      : FOLLOW(statement) | 
returnStatement     : FOLLOW(statement) | 
statement           : FOLLOW(statSequence) | ";" | 
statSequence        : "end" | "else" | 
varDeclaration      : "begin" | FIRST(subroutineDecl) - epsilon | 
varDeclSequence     : ";" | ")" |
varDecl             : FOLLOW(varDeclSequence) | ";" | 
subroutineDecl      : "begin" | 
procedureDecl       : FIRST(subroutineBody) - epsilon |
functionDecl        : FIRST(subroutineBody) - epsilon | 
formalParam         : ";" | ":" | 
subroutineBody      : ident | 

--- FOLLOW of SnuPL/1 keywords ---
(letter, digit, character, char, string, number, ident will be treated as terminals)
(terminal based)
module              : $ |
boolean             : "*" | "/" | "&&" | "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" | "+" | "-" | "||" | 
type                : "[" | ")" | ";" | 
basetype            : "[" | ")" | ";" |
qualident           : "*" | "/" | "&&" | "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" | "+" | "-" | "||" | ":=" | 
factOp              : ident | number | "true" | "false" | char | string | "(" | "!" | 
termOp              : ident | number | "true" | "false" | char | string | "(" | "!" | 
relOp               : "+" | "-" | ident | number | "true" | "false" | char | string | "(" | "!" | 
factor              : "*" | "/" | "&&" | "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" | "+" | "-" | "||" | 
term                : "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" | "+" | "-" | "||" | 
simpleexpr          : "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" |
expression          : "]" | ")" | "," | "end" | "else" | ";" |
assignment          : "end" | "else" | ";" | 
subroutineCall      : "*" | "/" | "&&" | "]" | ")" | "," | "end" | "else" | ";" | "=" | "#" | "<" | "<=" | ">" | ">=" | "+" | "-" | "||" | 
ifStatement         : "end" | "else" | ";" |
whileStatement      : "end" | "else" | ";" |
returnStatement     : "end" | "else" | ";" |
statement           : "end" | "else" | ";" | 
statSequence        : "end" | "else" | 
varDeclaration      : "begin" | "procedure" | "function" | 
varDeclSequence     : ";" | ")" |
varDecl             : ";" | ")" |
subroutineDecl      : "begin" | 
procedureDecl       : "var" | "begin" |
functionDecl        : "var" | "begin" |
formalParam         : ";" | ":" | 
subroutineBody      : ident | 

*/

//------------------------------------------------------------------------------
// CParser
//
CParser::CParser(CScanner *scanner)
{
  _scanner = scanner;
  _module = NULL;
}

CAstNode* CParser::Parse(void)
{
  _abort = false;

  if (_module != NULL) { delete _module; _module = NULL; }

  try {
    if (_scanner != NULL) _module = module();

    if (_module != NULL) {
      CToken t;
      string msg;
      if (!_module->TypeCheck(&t, &msg)) SetError(t, msg);
    }
  } catch (...) {
    _module = NULL;
  }

  return _module;
}

const CToken* CParser::GetErrorToken(void) const
{
  if (_abort) return &_error_token;
  else return NULL;
}

string CParser::GetErrorMessage(void) const
{
  if (_abort) return _message;
  else return "";
}

void CParser::SetError(CToken t, const string message)
{
  _error_token = t;
  _message = message;
  _abort = true;
  throw message;
}

bool CParser::Consume(EToken type, CToken *token)
{
  if (_abort) return false;

  CToken t = _scanner->Get();

  if (t.GetType() != type) {
    SetError(t, "expected '" + CToken::Name(type) + "', got '" +
             t.GetName() + "'");
  }

  if (token != NULL) *token = t;

  return t.GetType() == type;
}

void CParser::InitSymbolTable(CSymtab *s)
{
  CTypeManager *tm = CTypeManager::Get();
  CSymProc* f;
  
  // For info of predefined functions, please refer to data/PredefinedFunctions.txt file.
  
  f = new CSymProc("DIM", tm->GetInt());
  f->AddParam(new CSymParam(0, "array", tm->GetPointer(tm->GetNull())));
  f->AddParam(new CSymParam(1, "dim", tm->GetInt()));
  s->AddSymbol(f);
  
  f = new CSymProc("DOFS", tm->GetInt());
  f->AddParam(new CSymParam(0, "array", tm->GetPointer(tm->GetNull())));
  s->AddSymbol(f);
  
  f = new CSymProc("ReadInt", tm->GetInt());
  s->AddSymbol(f);
  
  f = new CSymProc("WriteInt", tm->GetNull());
  f->AddParam(new CSymParam(0, "i", tm->GetInt()));
  s->AddSymbol(f);
  
  f = new CSymProc("WriteChar", tm->GetNull());
  f->AddParam(new CSymParam(0, "c", tm->GetChar()));
  s->AddSymbol(f);
  
  f = new CSymProc("WriteStr", tm->GetNull());
  f->AddParam(new CSymParam(0, "str", tm->GetPointer(tm->GetArray(-1, tm->GetChar()))));
  s->AddSymbol(f);
  
  f = new CSymProc("WriteLn", tm->GetNull());
  s->AddSymbol(f);
}

CAstModule* CParser::module(void)
{
  //
  // module              = "module" ident ";" varDeclaration { subroutineDecl } "begin" 
  //                       statSequence "end" ident ".".
  //
  
  CSymtab moduleSymTab = new CSymtab(); // New symbol table for initialization of module's symbol table.
  
  CToken t; // For error indication.
  Consume(tModule); 
  
  CToken* module_id = new CToken(); // Module name.
  Consume(tId, module_id);
  Consume(tSemicolon);
  
  CAstModule* m = new CAstModule(t, module_id->GetValue()); // Scope for module.
  
  CTypeManager* typeManager = CTypeManager::Get(); // Typemanager to deal with types.
  
  InitSymbolTable(m->GetSymbolTable()); // Initialize module's symbol table.
  
  CToken checkIfVar = _scanner->Peek(); // Check if there are global variables.
  if (checkIfVar.GetType() == tVar) // Global variable exists.
  {
    Consume(tVar);
   
    while (true)
    {
      vector<CToken*> varVec; // Vector for one type of global variables.
      CType* varType = GetVariables(_scanner, &varVec); // Get one type of global variables and their type.
            
      vector<CToken*>::iterator oneTypeIter = varVec.begin();
      while(oneTypeIter != varVec.end() && varVec.size() > 0) // Iterate through vector and add variables.
      {
        bool addVarRes = m->GetSymbolTable()->AddSymbol(m->CreateVar((*oneTypeIter)->GetValue(), varType)); // Add variable to symbol table.
        
        if (!addVarRes) // If adding fails, i.e. there are already variable with same name, throw error.
        {
          SetError((*oneTypeIter), "duplicate variable declaration '" + (*oneTypeIter)->GetValue() + "'.");
        }
        oneTypeIter++;
      }
      Consume(tSemicolon); // Semicolon separates one type of variables from other ones.
      if (_scanner->Peek().GetType() != tId) // If there are no more variables to add, end loop.
      {
        break;
      }
    }
  }

  // Part for processing multiple procedure/function. ===START===
  while (_scanner->Peek().GetType() == tProcedure || _scanner->Peek().GetType() == tFunction) // Procedure/Function definitions. May be multiple of them.
  {
    if (_scanner->Peek().GetType() == tProcedure) // Procedure case.
    {
      Consume(tProcedure);
      CToken* procName = new CToken(); // For procedure name.
      Consume(tId, procName);
      
      const CSymbol* procNameDupCheck = m->GetSymbolTable()->FindSymbol(procName->GetValue()); // Check if there is already procedure/function/variable with same name.
      if (procNameDupCheck != NULL) // If there is, throw error.
      {
        SetError(procName, "duplicate procedure/function declaration '" + procName->GetValue() + "'.");
      }
      
      vector<vector<CSymParam*> > parameterVector; // Vector for temporarily containing parameters.
      
      if (_scanner->Peek().GetType() == tLBracketRound) // When procedure has parameters.
      {
        Consume(tLBracketRound);
        
        if (_scanner->Peek().GetType() != tRBracketRound) // When procedure has parameters, get them. Duplication check is done in GetParams function.
        {
          GetParams(_scanner, typeManager, &parameterVector, 0); // Get parameters for procedure.
        }
        
        Consume(tRBracketRound);
      }
      Consume(tSemicolon); 
     
      CSymProc* procSymbol = new CSymProc(procName->GetValue(), typeManager->GetNull()); // Symbol for procedure. Procedure returns NULL.
            
      vector<vector<CSymParam*> >::iterator iter = parameterVector.begin();
      
      while(iter != parameterVector.end() && parameterVector.size() > 0) // Add symbols to procedure symbol.
      {
        vector<CSymParam*> oneTypeParamVec = *iter;
        vector<CSymParam*>::reverse_iterator oneTypeIter = oneTypeParamVec.rbegin();
        while(oneTypeIter != oneTypeParamVec.rend() && oneTypeParamVec.size() > 0)
        {
          CSymParam* param = *oneTypeIter;
          
          procSymbol->AddParam(param);
          oneTypeIter++;
        }
        iter++;
      }
            
      CAstProcedure* procScope = new CAstProcedure(procName, procName->GetValue(), m, procSymbol); // Scope for procedure.
      
      iter = parameterVector.begin();
      
      while(iter != parameterVector.end() && parameterVector.size() > 0) // Add symbols to symbol table of procedure.
      {
        vector<CSymParam*> oneTypeParamVec = *iter;
        vector<CSymParam*>::reverse_iterator oneTypeIter = oneTypeParamVec.rbegin();
        while(oneTypeIter != oneTypeParamVec.rend() && oneTypeParamVec.size() > 0)
        {
          CSymParam* param = *oneTypeIter;
          procScope->GetSymbolTable()->AddSymbol(param);
          oneTypeIter++;
        }
        iter++;
      }
            
      m->GetSymbolTable()->AddSymbol(procSymbol); // Add procedure symbol to module's symbol table.
      
      
      if (_scanner->Peek().GetType() == tVar) // When procedure has its local variables.
      {
        Consume(tVar);
        while (true) // Iterates until there is no variable to declare.
        {
          vector<CToken*> varVec;
          CType* varType = GetVariables(_scanner, &varVec); // Get one type of variables.
          
          vector<CToken*>::iterator oneTypeIter = varVec.begin();
          while(oneTypeIter != varVec.end() && varVec.size() > 0)
          {
            bool addVarRes = procScope->GetSymbolTable()->AddSymbol(procScope->CreateVar((*oneTypeIter)->GetValue(), varType)); // Add variable to procedure scope.
            if (!addVarRes) // Check for variable duplication.
            {
              SetError(*oneTypeIter, "duplicate variable declaration '" + (*oneTypeIter)->GetValue() + "'.");
            }
            oneTypeIter++;
          }
          
          Consume(tSemicolon);
          if (_scanner->Peek().GetType() != tId) // If there is no more, stop.
          {
            break;
          }
        }
      }
            
      Consume(tBegin);
      
      CAstStatement* procStatSeq = NULL;
      procStatSeq = statSequence(procScope); // Get sequence of statements for this procedure.
            
      Consume(tEnd);
      procScope->SetStatementSequence(procStatSeq); // Set procedure's statement sequence.
            
      CToken* procNameCheck = new CToken();
      Consume(tId, procNameCheck); // Ending name of procedure. Must match starting name.
      if (procNameCheck->GetValue() != procName->GetValue()) // Check if name matches.
      {
        SetError(procNameCheck, "procedure/function identifier mismatch ('"+procName->GetValue()+"' != '"+procNameCheck->GetValue()+"').");
      }
      Consume(tSemicolon);
    }
    else // Function case.
    {
      Consume(tFunction); // Function case.
      CToken* funcName = new CToken(); // For function name.
      Consume(tId, funcName);
      
      const CSymbol* funcNameDupCheck = m->GetSymbolTable()->FindSymbol(funcName->GetValue()); // Check if there is already procedure/function/variable with same name.
      if (funcNameDupCheck != NULL) // If there is, throw error.
      {
        SetError(funcName, "duplicate procedure/function declaration '" + funcName->GetValue() + "'.");
      }
      
      vector<vector<CSymParam*> > parameterVector; // Vector for temporarily containing parameters.
      
      if (_scanner->Peek().GetType() == tLBracketRound) // When function has parameters.
      {
        Consume(tLBracketRound);
        
        if (_scanner->Peek().GetType() != tRBracketRound) // When function has parameters, get them.
        {
          GetParams(_scanner, typeManager, &parameterVector, 0); // Get parameters for function. Duplication check is done in GetParams() function.
        }
        
        Consume(tRBracketRound);
      }
      Consume(tColon);
      
      CToken funcReturnTypeToken = _scanner->Peek(); // Token for checking return type.
      CType* funcReturnType = type(typeManager, false); // Gets return type of function.
      if (!funcReturnType->IsScalar()) // Function return type should be scalar one.
      {
        SetError(funcReturnTypeToken, "invalid composite type for function.");
      }
      
      Consume(tSemicolon);
      
      CSymProc* funcSymbol = new CSymProc(funcName->GetValue(), funcReturnType); // Symbol for function. Return type is funcReturnType.
      
      vector<vector<CSymParam*> > symbolVector = parameterVector;
      
      vector<vector<CSymParam*> >::iterator iter = parameterVector.begin();
      
      while(iter != parameterVector.end() && parameterVector.size() > 0) // Add parameters to function symbol.
      {
        vector<CSymParam*> oneTypeParamVec = *iter;
        vector<CSymParam*>::reverse_iterator oneTypeIter = oneTypeParamVec.rbegin();
        while(oneTypeIter != oneTypeParamVec.rend() && oneTypeParamVec.size() > 0)
        {
          CSymParam* param = *oneTypeIter;
          funcSymbol->AddParam(param);
          oneTypeIter++;
        }
        iter++;
      }
            
      CAstProcedure* funcScope = new CAstProcedure(funcName, funcName->GetValue(), m, funcSymbol); // Scope for function.
      
      iter = parameterVector.begin();
      
      while(iter != parameterVector.end() && parameterVector.size() > 0)
      {
        vector<CSymParam*> oneTypeParamVec = *iter;
        vector<CSymParam*>::reverse_iterator oneTypeIter = oneTypeParamVec.rbegin();
        while(oneTypeIter != oneTypeParamVec.rend() && oneTypeParamVec.size() > 0)
        {
          CSymParam* param = *oneTypeIter;
          funcScope->GetSymbolTable()->AddSymbol(param);
          oneTypeIter++;
        }
        iter++;
      }
            
      m->GetSymbolTable()->AddSymbol(funcSymbol); // Add function symbol to module's symbol table.
      
      if (_scanner->Peek().GetType() == tVar) // When function has its local variables.
      {
        Consume(tVar);
        while (true) // Iterates until there is no variable to declare.
        {
          vector<CToken*> varVec; // Vector for getting one type of variables.
          CType* varType = GetVariables(_scanner, &varVec); // Get one type of variables.
          
          vector<CToken*>::iterator oneTypeIter = varVec.begin();
          while(oneTypeIter != varVec.end() && varVec.size() > 0) // Add variables to function scope.
          {
            bool addVarRes = funcScope->GetSymbolTable()->AddSymbol(funcScope->CreateVar((*oneTypeIter)->GetValue(), varType));
            if (!addVarRes) // Check for variable duplication.
            {
              SetError(*oneTypeIter, "duplicate variable declaration '" + (*oneTypeIter)->GetValue() + "'.");
            }
            oneTypeIter++;
          }
          
          Consume(tSemicolon);
          if (_scanner->Peek().GetType() != tId) // If there is no more, stop.
          {
            break;
          }
        }
      }
            
      Consume(tBegin);
      
      CAstStatement* funcStatSeq = NULL;
      funcStatSeq = statSequence(funcScope); // Get sequence of statements for this function.
            
      Consume(tEnd);
      funcScope->SetStatementSequence(funcStatSeq); // Set procedure's statement sequence.
            
      CToken* funcNameCheck = new CToken();
      Consume(tId, funcNameCheck); // Ending name of procedure. Must match starting name.
      if (funcNameCheck->GetValue() != funcName->GetValue()) // Check if name matches.
      {
        SetError(funcNameCheck, "procedure/function identifier mismatch ('"+funcName->GetValue()+"' != '"+funcNameCheck->GetValue()+"').");
      }
      Consume(tSemicolon);
    }
  }
  // Part for processing multiple procedures/functions. ===END===
  
  Consume(tBegin);
  
  CAstStatement* statseq = statSequence(m); // Get statement sequence of module.
  
  Consume(tEnd);
  m->SetStatementSequence(statseq); // Set statement sequence of module.
  
  CToken* module_id_check = new CToken();
  Consume(tId, module_id_check); // Ending name of module. Must match starting name.

  if (module_id->GetValue() != module_id_check->GetValue()) // Check if name matches.
  {
    SetError(module_id_check, "module identifier mismatch ('" + module_id->GetValue() + "' != '" + module_id_check->GetValue() + "').");
  }
  Consume(tDot);
  
  return m;
}

bool CParser::CheckParamDups (vector<vector<CSymParam*> >* paramVec, const string elemToFind)
{
  // Parameters are the first local symbols that will be added to procedure/function scope.
  // So, we only check for duplication in parameters.
  // Local variables will be added after all the parameters are added,
  // therefore parameter-(local)variable duplication will be check when local variables are added.
  bool res = false; // Initialize result at false.
  vector<vector<CSymParam*> >::iterator iter = paramVec->begin();
  while (paramVec->size() > 0 && iter != paramVec->end()) // Iterates through parameters and check for duplication.
  {
    vector<CSymParam*> oneTypeVec = *iter;
    vector<CSymParam*>::iterator oneTypeIter = oneTypeVec.begin();
    while (oneTypeVec.size() > 0 && oneTypeIter != oneTypeVec.end())
    {
      if ((*oneTypeIter)->GetName() == elemToFind) // If duplication occurs, set res to true and return.
      {
        res = true;
        return res;
      }
      oneTypeIter++;
    }
    iter++;
  }
  return res;
}

// This function is deprecated. New one has been implemented below.
/*CType* CParser::GetOneTypeParams (CScanner* _scanner, CTypeManager* _tm, vector<CSymParam*>* paramVec, vector<vector<CSymParam*> >* originVec, int idx)
{
  CToken* paramId = new CToken();
  Consume(tId, paramId); // Get identifier for parameter.
  
  cout << "===(DEBUG)===At GetOneTypeParams - before CheckParamDups, number of parameters read : " << originVec->at(0).size() << endl;
    
  CType* paramType = NULL;
  
  if (_scanner->Peek().GetType() == tComma) // When there are more identifier(s) of same type.
  {
    Consume(tComma);
    paramType = GetOneTypeParams(_scanner, _tm, paramVec, originVec, idx+1); // Recursive call.
    bool checkDupRes = CheckParamDups(originVec, paramId->GetValue()); // Check for parameter duplication.
    if (checkDupRes) // If duplication occurs, throw error.
    {
      SetError(paramId, "duplicate variable declaration '" + paramId->GetValue() + "'.");
    }
    paramVec->push_back(new CSymParam(idx, paramId->GetValue(), paramType)); // When above recursive call returns type, add parameter to procedure symbol.
  }
  else // When there are no more identifier(s) of same type.
  {
    Consume(tColon);
    paramType = type(_tm, true); // Set Parameter type.
    if (!paramType->IsBoolean() && !paramType->IsChar() && !paramType->IsInt() && !paramType->IsArray() && !paramType->IsPointer()) // Check for type.
    {
      cout << "Type error!" << endl;
    }
    bool checkDupRes = CheckParamDups(originVec, paramId->GetValue()); // Check for parameter duplication.
    if (checkDupRes) // If duplication occurs, throw error.
    {
      SetError(paramId, "duplicate variable declaration '" + paramId->GetValue() + "'.");
    }
    paramVec->push_back(new CSymParam(idx, paramId->GetValue(), paramType)); // Add parameter to CSymParam* vector.
  }
  
  return paramType; // Return the type for recursive call.
}*/


CType* CParser::GetOneTypeParams (CScanner* _scanner, CTypeManager* _tm, vector<CSymParam*>* paramVec, vector<vector<CSymParam*> >* originVec, int idx)
{
  vector<CToken*> tokenTemp; // Vector containing read CToken pointers temporarily.
  
  while (_scanner->Peek().GetType() == tId) // When there is identifier to be processed, check for duplication and add token to above temporary vector.
  {
    bool checkDupResOriginVec = CheckParamDups(originVec, _scanner->Peek().GetValue()); // Check for duplication with other types.
    bool checkDupResCurrentVec = false;
    vector<CToken*>::iterator checkDupIter = tokenTemp.begin();
    while (checkDupIter != tokenTemp.end()) // Check for duplication with current type parameters.
    {
      if ((*checkDupIter)->GetValue() == _scanner->Peek().GetValue())
      {
        checkDupResCurrentVec = true;
        break;
      }
      checkDupIter++;
    }
    if (checkDupResOriginVec || checkDupResCurrentVec) // At least one of duplication has been detected, error.
    {
      SetError(_scanner->Peek(), "duplicate variable declaration '" + _scanner->Peek().GetValue() + "'.");
    }
    CToken* paramId = new CToken();
    Consume(tId, paramId); // Get the token.
    tokenTemp.push_back(paramId); // Add to temporary token vector.
    if (_scanner->Peek().GetType() == tComma) // If there is more to read, loop again.
    {
      Consume(tComma);
    }
  }
  Consume(tColon);
  CType* paramType = NULL;
  paramType = type(_tm, true); // Get type of parameters.
  vector<CToken*>::iterator tempIter = tokenTemp.begin();
  int tokenIdx = idx;
  while (tempIter != tokenTemp.end()) // Iterates through temporary token vectors, add each of them to paramVec.
  {
    paramVec->push_back(new CSymParam(tokenIdx, (*tempIter)->GetValue(), paramType)); // Push to the paramVec.
    tokenIdx++;
    tempIter++;
  }
  return paramType; // Return read type of parameters.
}

CType* CParser::GetParams (CScanner* _scanner, CTypeManager* _tm, vector<vector<CSymParam*> >* paramVec, int lastIdx)
{
  paramVec->resize(paramVec->size() + 1); // Add space for one type of parameters.
  CType* oneTypeResult = GetOneTypeParams(_scanner, _tm, &(paramVec->at(paramVec->size() - 1)), paramVec, lastIdx+1); // Adds one type of parameters.
  if (_scanner->Peek().GetType() == tSemicolon) // When there are more variables.
  {
    Consume(tSemicolon);
    return GetParams(_scanner, _tm, paramVec, (paramVec->at(paramVec->size() - 1)).size() + lastIdx - 1); // Recursive call.
  }
  else
  {
    return oneTypeResult; // Return the type for recursive call.
  }
}

CType* CParser::GetVariables (CScanner* _scanner, vector<CToken*>* varVec)
{
  CToken* varId = new CToken();
  Consume(tId, varId); // Gets identifier for variable.
  
  varVec->push_back(varId);
  
  while (_scanner->Peek().GetType() == tComma) // When there are more variable of same type.
  {
    Consume(tComma);
    varId = new CToken();
    Consume(tId, varId); // Gets identifier for variable.
    
    varVec->push_back(varId); // Push got identifier into variable vector.
  }
  Consume(tColon);
  CType* identType = NULL;
  identType = type(CTypeManager::Get(), false); // Gets variables' type.
  return identType; // Return the type to use for adding variable to procedure/function symbol table.
}

const CType* CParser::GenerateArrayType(CScanner* _scanner, CTypeManager* _tm, CType* _baseType, bool _isParam)
{
  CToken* elemCount = new CToken();
  if ((_scanner->Peek().GetType() != tRBracket) && _isParam)
  {
    Consume(tNum, elemCount); // Gets number of element in this dimension.
  }
  if (!_isParam)
  {
    Consume(tNum, elemCount);
  }
  Consume(tRBracket);
  char* endPtr = 0; // For string to integer conversion.
  int nelem = -1; // Number of elements in this dimension.
  if (elemCount->GetType() != tUndefined) // When number of elements are specified, get it.
  {
    nelem = strtol(elemCount->GetValue().c_str(), &endPtr, 10);
  }
  if (_scanner->Peek().GetType() == tLBracket) // When more dimensions exist.
  {
    Consume(tLBracket);
    return _tm->GetArray(nelem, GenerateArrayType(_scanner, _tm, _baseType, _isParam)); // Type for this dimension will be array of array by recursive call.
  }
  else // When there are no more dimensions exist. i.e., 1st dimension.
  {
    return _tm->GetArray(nelem, _baseType); // Type of this dimension will be array of _baseType.
  }
}
